--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <header class="headlines" role="banner">
     <h1 class="headlines__title">
-        {{ if .IsPage }}<a href="{{ .Site.BaseURL }}">{{ end }}
+        {{ if .IsPage }}<a href="/" title="Retourner à l'accueil">{{ end }}
             {{ .Site.Params.headline }}
         {{ if .IsPage }}</a>{{ end }}
     </h1>
-    <h2 class="headlines__baseline">{{ .Site.Params.baseline }}</h2>
+    <h2 class="headlines__baseline" lang="en">{{ .Site.Params.baseline }}</h2>
 </header>
