Revert "font stack and css build"
This reverts commit d7d80473b6b4767f6ebda8308c66419bffdbbbbe.

--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -5,8 +5,8 @@
 
 // Typography
 
-$fontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$fontFamilyAlternative: Georgia,Times,Times New Roman,serif;
+$fontFamily:
+$fontFamilyAlternative: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $fontSize: 1em;
 $baseline: 1.5;
 
