Font stack and vertical rhythm

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,9 +2,12 @@
 
 <body class="list-template">
     <div class="page">
-        {{ partial "header" . }}
-        {{ partial "navigation" . }}
-        <main class="content" role="main" id="contenu-principal">
+        <section class="header-wrapper">
+            {{ partial "header" . }}
+            {{ partial "navigation" . }}
+        </section>
+        <main class="content" role="main" id="main-content">
+            <h1>{{ .Title }}</h1>
     		{{ partial "post-list" . }}
             {{ partial "pagination" . }}
         </main>
