--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -5,8 +5,8 @@
 
 // Typography
 
-$fontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$fontFamilyAlternative: Georgia,Times,Times New Roman,serif;
+$fontFamily: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+$fontFamilyAlternative: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 $fontSize: 1em;
 $baseline: 1.5;
 
