--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,12 +2,14 @@
 
 <body class="post-template">
     <div class="page">
-        {{ partial "header" . }}
-        {{ partial "navigation" . }}
+        <section class="header-wrapper">
+            {{ partial "header" . }}
+            {{ partial "navigation" . }}
+        </section>
         <main class="content" role="main" id="main-content" itemscope itemtype="http://schema.org/Article">
             <article class="post">
                 <header>
-                    <h1 class="post-title" itemprop="name" role="heading" arial-level="1">{{ .Title }}</h1>
+                    <h1 class="post-title" itemprop="name">{{ .Title }}</h1>
                 </header>
                 <section class="post-content" itemprop="articleBody">
                     {{ .Content }}
