--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,7 @@
 <header class="headlines" role="banner">
-    <h1 class="headlines__title">
-        {{ if .IsPage }}<a href="{{ .Site.BaseURL }}">{{ end }}
-            {{ .Site.Params.headline }}
-        {{ if .IsPage }}</a>{{ end }}
-    </h1>
-    <h2 class="headlines__baseline">{{ .Site.Params.baseline }}</h2>
+    {{ if .IsHome }}
+        <h1 class="headlines__title">{{ .Site.Params.headline }}</h1>
+    {{ else }}
+        <a class="headlines__title" href="{{ .Site.BaseURL }}">{{ .Site.Params.headline }}</a>
+    {{ end }}
 </header>
