--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -13,7 +13,11 @@ $baseline: 1.5;
 
 // ColorScheme
 
-$black: #000;
-$dark: #333;
-$light: #777;
-$white: #fff;
+$black: #000000;
+$white: #FFFFFF;
+
+$neutral: #E5E1D1;
+$light: #52616D;
+$base: #2C343B;
+$contrast: #C44741;
+$shadow: #77201C;
