--- a/static/sass/custom/layout.scss
+++ b/static/sass/custom/layout.scss
@@ -6,7 +6,14 @@ html {
     background-color: $white;
 }
 
-.page {
-    max-width: 700px;
+.header-wrapper {
+    background-color: $neutral;
+}
+
+.headline,
+.menu,
+.content,
+.legal {
     margin: 0 auto;
+    max-width: 700px;
 }
