--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,10 @@
 <footer class="legal" role="contentinfo" itemscope itemtype="http://schema.org/Person">
-    <ul>
+    <ul class="credits">
         <li itemprop="name">
             <span itemprop="givenName">{{ .Site.Params.firstName }}</span>
             <span itemprop="familyName">{{ .Site.Params.lastName }}</span>
         </li>
+        <li>2016</li>
         <li>Powered by <a href="http://gohugo.io" title="Hugo">Hugo</a> and <a href="//github>com/the2ne/hugo-frais" title="Theme by Olivier Fredon">Hugo Frais</a>.</li>
     </ul>
     <link itemprop="url" href="{{ .Site.BaseURL }}">
