--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -440,6 +441,17 @@ a:active {
     color: #52616D;
 }
 
+blockquote {
+    background-color: #E5E1D1;
+    /* The Fallback */
+    background-color: rgba(229, 225, 209, 0.3);
+    border-left: 6px solid #E5E1D1;
+    font-size: 1.25em;
+    margin-left: 0;
+    margin-right: 0;
+    padding: .5em 1.5em;
+}
+
 .visua11y-hidden {
     border: 0;
     clip: rect(1px 1px 1px 1px);
@@ -459,14 +471,120 @@ html {
 
 .header-wrapper {
     background-color: #E5E1D1;
+    display: table;
+    padding: .5em 1.5em;
+    width: 100%;
 }
 
-.headline,
-.menu,
-.content,
-.legal {
+.header-wrapper a {
+    text-decoration: none;
+}
+
+.header-wrapper .headline,
+.header-wrapper .menu {
+    display: table-cell;
+    height: 80px;
+    vertical-align: middle;
+}
+
+.header-wrapper .headline {
+    text-align: left;
+}
+
+.header-wrapper .menu {
+    text-align: right;
+}
+
+.menu__items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu__items .item {
+    display: inline-block;
+}
+
+.menu__items .item + .item {
+    margin-left: .5em;
+}
+
+.menu__items .item + .item::before {
+    color: #FFFFFF;
+    content: "|";
+    display: inline-block;
+    margin-right: .5em;
+}
+
+.content {
     margin: 0 auto;
-    max-width: 700px;
+    max-width: 40em;
+    padding: 0 1.5em;
+}
+
+.legal {
+    color: #52616D;
+    text-align: center;
+}
+
+.legal .credits {
+    border-top: 1px solid #C44741;
+    margin: 2em auto 1em;
+    padding-left: 0;
+    padding-top: 1em;
+    list-style-type: none;
+}
+
+.legal .credits > * {
+    display: inline-block;
+}
+
+.legal .credits li + li {
+    margin-left: .25em;
+}
+
+.legal .credits li + li::before {
+    color: #C44741;
+    content: "•";
+    display: inline-block;
+    margin-right: .25em;
+}
+
+.post-meta {
+    color: #52616D;
+    display: table;
+    width: 100%;
+}
+
+.post-meta [class^=post-meta__] {
+    display: table-cell;
+    vertical-align: middle;
+    margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.post-meta [class^=post-meta__] > * {
+    display: inline-block;
+}
+
+.post-meta [class^=post-meta__] li + li {
+    margin-left: .25em;
+}
+
+.post-meta [class^=post-meta__] li + li::before {
+    color: #C44741;
+    content: "•";
+    display: inline-block;
+    margin-right: .25em;
+}
+
+.post-meta .post-meta__infos {
+    text-align: left;
+}
+
+.post-meta .post-meta__tags {
+    text-align: right;
 }
 
 html {
@@ -474,11 +592,12 @@ html {
     font-size: 1em;
 }
 
-.page {
+.template {
     font-size: 1.25em;
 }
 
 .headline__title {
+    color: #C44741;
     font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
     font-size: 1.5em;
     font-weight: bold;
