--- a/static/sass/custom/breakpoints.scss
+++ b/static/sass/custom/breakpoints.scss
@@ -4,10 +4,21 @@
 
 // Medium breakpoint
 @media screen and (min-width: 40em) {
+    h1 { font-size: $fontSize * 3; }
+    h2 { font-size: $fontSize * 2.5; }
+    h3 { font-size: $fontSize * 2; }
+    h4 { font-size: $fontSize * 1.75; }
+    h5 { font-size: $fontSize * 1.25; }
+    h6 { font-size: $fontSize * 1; }
 
 }
 
 // Desktop breakpoint
 @media screen and (min-width: 60em) {
-
+    h1 { font-size: $fontSize * 4.5; }
+    h2 { font-size: $fontSize * 3; }
+    h3 { font-size: $fontSize * 2.5; }
+    h4 { font-size: $fontSize * 2; }
+    h5 { font-size: $fontSize * 1.5; }
+    h6 { font-size: $fontSize * 1; }
 }
