--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,12 +8,12 @@
     <main class="content" role="main" id="main-content" itemscope itemtype="http://schema.org/Article">
         <article class="post">
             <header>
-                <h1 class="post-title" itemprop="name">{{ .Title }}</h1>
+                <h1 class="post__title" itemprop="name">{{ .Title }}</h1>
             </header>
-            <section class="post-content" itemprop="articleBody">
+            <section class="post__content" itemprop="articleBody">
                 {{ .Content }}
             </section>
-            <footer class="post-meta">
+            <footer class="post__meta">
                 {{ partial "post-meta" . }}
             </footer>
         </article>
