--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -5,16 +5,16 @@
     <header>
         <h2 class="post__title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
     </header>
-    <section class="post-meta">
-        <ul class="post-meta__infos">
+    <footer class="post__meta">
+        <ul class="post__meta__infos">
             <li class="post-meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 January 2006" }}</time></li>
         </ul>
-        <ul class="post-meta__tags">
+        <ul class="post__meta__tags">
             {{ range .Params.tags }}
             <li><a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a></li>
             {{ end }}
         </ul>
-    </section>
+    </footer>
     <section class="post__excerpt">
         <p>{{ .Summary }}&hellip;</p>
         {{ if .Truncated }}
