--- a/static/css/style.css
+++ b/static/css/style.css
@@ -452,6 +452,17 @@ blockquote {
     padding: .5em 1.5em;
 }
 
+code {
+    background-color: #C44741;
+    /* The Fallback */
+    background-color: rgba(196, 71, 65, 0.1);
+    border-left: 6px solid #C44741;
+    color: #C44741;
+    display: block;
+    margin: 1em 0;
+    padding: .5em 1.5em;
+}
+
 .visua11y-hidden {
     border: 0;
     clip: rect(1px 1px 1px 1px);
@@ -522,41 +533,23 @@ html {
     padding: 0 1.5em;
 }
 
+.content .post--preview + .post--preview {
+    margin-top: 3em;
+}
+
 .legal {
-    color: #52616D;
+    color: #77201C;
+    margin-top: 3em;
     text-align: center;
 }
 
-.legal .credits {
-    border-top: 1px solid #C44741;
-    margin: 2em auto 1em;
-    padding-left: 0;
-    padding-top: 1em;
-    list-style-type: none;
-}
-
-.legal .credits > * {
-    display: inline-block;
-}
-
-.legal .credits li + li {
-    margin-left: .25em;
-}
-
-.legal .credits li + li::before {
-    color: #C44741;
-    content: "•";
-    display: inline-block;
-    margin-right: .25em;
-}
-
-.post-meta {
+.post__meta {
     color: #52616D;
     display: table;
     width: 100%;
 }
 
-.post-meta [class^=post-meta__] {
+.post__meta [class^=post__meta__] {
     display: table-cell;
     vertical-align: middle;
     margin: 0;
@@ -564,26 +557,26 @@ html {
     list-style-type: none;
 }
 
-.post-meta [class^=post-meta__] > * {
+.post__meta [class^=post__meta__] > * {
     display: inline-block;
 }
 
-.post-meta [class^=post-meta__] li + li {
+.post__meta [class^=post__meta__] li + li {
     margin-left: .25em;
 }
 
-.post-meta [class^=post-meta__] li + li::before {
+.post__meta [class^=post__meta__] li + li::before {
     color: #C44741;
     content: "•";
     display: inline-block;
     margin-right: .25em;
 }
 
-.post-meta .post-meta__infos {
+.post__meta .post__meta__infos {
     text-align: left;
 }
 
-.post-meta .post-meta__tags {
+.post__meta .post__meta__tags {
     text-align: right;
 }
 
@@ -616,28 +609,46 @@ h2, h4, h6 {
     color: #52616D;
 }
 
-h1 {
-    font-size: 4.5em;
+@media screen and (min-width: 40em) {
+    h1 {
+        font-size: 3em;
+    }
+    h2 {
+        font-size: 2.5em;
+    }
+    h3 {
+        font-size: 2em;
+    }
+    h4 {
+        font-size: 1.75em;
+    }
+    h5 {
+        font-size: 1.25em;
+    }
+    h6 {
+        font-size: 1em;
+    }
 }
 
-h2 {
-    font-size: 3em;
-}
-
-h3 {
-    font-size: 2.5em;
-}
-
-h4 {
-    font-size: 2em;
-}
-
-h5 {
-    font-size: 1.5em;
-}
-
-h6 {
-    font-size: 1em;
+@media screen and (min-width: 60em) {
+    h1 {
+        font-size: 4.5em;
+    }
+    h2 {
+        font-size: 3em;
+    }
+    h3 {
+        font-size: 2.5em;
+    }
+    h4 {
+        font-size: 2em;
+    }
+    h5 {
+        font-size: 1.5em;
+    }
+    h6 {
+        font-size: 1em;
+    }
 }
 
 /*# sourceMappingURL=style.css.map */
