--- a/static/sass/custom/typography.scss
+++ b/static/sass/custom/typography.scss
@@ -13,10 +13,12 @@ html {
 
 .headline__title {
     color: $contrast;
+    display: block;
     font-family: $fontFamily;
     font-size: $fontSize * 1.5;
     font-weight: bold;
     margin: 0;
+    padding: .5em 0;
 }
 
 h1, h3, h5 {
