--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,5 +1,5 @@
 {{ $baseurl := .Site.BaseURL }}
-{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") }}
+{{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") 1 }}
 {{ range $paginator.Pages }}
 <article class="post post--preview">
     <header>
