--- a/static/sass/_mixins.scss
+++ b/static/sass/_mixins.scss
@@ -17,3 +17,11 @@
     background-color: $color; /* The Fallback */
     background-color: rgba($color, $opacity);
 }
+
+/// Separator on ::before
+@mixin _separator-before($color: inherit, $content: "•", $margin: 0.5em) {
+        color: $color;
+        content: $content;
+        display: inline-block;
+        margin-right: $margin;
+}
