--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,31 @@
     </section>
     <main class="content" role="main" id="main-content">
         <h1>Yay!</h1>
-        {{ partial "post-list" . }}
-        {{ partial "pagination" . }}
+        {{ $baseurl := .Site.BaseURL }}
+        {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") 3 }}
+        {{ range $paginator.Pages }}
+        <article class="post post--preview">
+            <header>
+                <h2 class="post__title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+            </header>
+            <footer class="post__meta">
+                <ul class="post__meta__infos">
+                    <li class="post-meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 January 2006" }}</time></li>
+                </ul>
+                <ul class="post__meta__tags">
+                    {{ range .Params.tags }}
+                    <li><a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a></li>
+                    {{ end }}
+                </ul>
+            </footer>
+            <section class="post__excerpt">
+                <p>{{ .Summary }}&hellip;</p>
+                {{ if .Truncated }}
+                <p class="readmore"><a href="{{ .Permalink }}">Read More…</a></p>
+                {{ end }}
+            </section>
+        </article>
+        {{ end }}
     </main>
     {{ partial "footer" . }}
     {{ partial "js" . }}
