--- a/static/sass/custom/breakpoints.scss
+++ b/static/sass/custom/breakpoints.scss
@@ -21,4 +21,61 @@
     h4 { font-size: $fontSize * 2; }
     h5 { font-size: $fontSize * 1.5; }
     h6 { font-size: $fontSize * 1; }
+
+    // header
+    .header-wrapper {
+        background-color: $neutral;
+        display: table;
+        padding: .5em 1.5em;
+        width: 100%;
+        .headline {
+            padding: 0;
+        }
+
+        .headline,
+        .menu {
+            display: table-cell;
+            vertical-align: middle;
+        }
+
+        .headline {
+            text-align: left;
+        }
+
+        .menu {
+            text-align: right;
+        }
+    }
+
+    // Menu
+    .menu__items {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+            display: inline-block;
+        }
+
+        li + li {
+            margin-left: .5em;
+        }
+
+        li + li::before {
+            @include  _separator-before($white, "|");
+        }
+
+        a {
+            background-color: transparent;
+            color: $contrast;
+            display: inline;
+            padding: 0;
+            text-decoration: none;
+        }
+
+        a:hover {
+            background-color: transparent;
+            color: $shadow;
+        }
+    }
 }
